force-app/main/default/objects/Session_Series__c/Session_Series__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Session Series</label>
    <nameField>
        <displayFormat>SessionSeries-{0}</displayFormat>
        <label>Session Series #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Series</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>