force-app/main/default/objects/Session_Series__c/fields/Assign_Event_to__c.field-meta.xml
<CustomField>
    <fullName>Assign_Event_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Processed by trigger</description>
    <inlineHelpText>If Create Event is checked, this field is used to assign the Event owner (Assigned To). If it is left blank the event is assigned to the current user.</inlineHelpText>
    <label>Assign Event to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Session_Series</relationshipName>
    <type>Lookup</type>
</CustomField>