force-app/main/default/objects/Session_Series__c/fields/Create_Event__c.field-meta.xml
<CustomField>
    <fullName>Create_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Creates a Salesforce Calendar event linking it this client session via the Related To field on the event.</inlineHelpText>
    <label>Create Event</label>
    <type>Checkbox</type>
</CustomField>