force-app/main/default/objects/Session_Series__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>1.0</defaultValue>
    <inlineHelpText>The length of the meeting or preparation and meeting time in hours. Not related to client UOS.</inlineHelpText>
    <label>Duration (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>