force-app/main/default/objects/Session_Series__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>