force-app/main/default/objects/Session_Series__c/fields/Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note__c</fullName>
    <label>Progress Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>