force-app/main/default/objects/Session_Series__c/fields/Reoccurrence__c.field-meta.xml
<CustomField>
    <fullName>Reoccurrence__c</fullName>
    <label>Reoccurrence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Once</fullName>
                <default>true</default>
                <label>Once</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>