force-app/main/default/objects/Session_Series__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>